# mp3Con

./: CMakeLists.txt  LICENSE  README.md  cmake.bat  cmake.sh  mp3con.cpp
