cmake_minimum_required(VERSION 3.20)
set(target_name mp3con)
project(${target_name})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(INSTALL_DEST)
else()
	if(WIN32)
		set(INSTALL_DEST "C:/nicsmocs/bin")
	else()
		set(INSTALL_DEST "/bin")
	endif()
endif()

message("Install dir is " ${INSTALL_DEST})
add_executable(${target_name} mp3con.cpp)

set_target_properties(${target_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${INSTALL_DEST})
target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR}/lib)
target_link_libraries(${target_name} PRIVATE debug nicsmocsd optimized nicsmocs)

if(WIN32)
	install(FILES ${CMAKE_SOURCE_DIR}/lib/libmp3lame.dll DESTINATION ${INSTALL_DEST})
	target_link_libraries(${target_name} PRIVATE libmp3lame)
else()
	target_link_libraries(${target_name} PRIVATE mp3lame)
endif()
